--- a/website-dist/index.html
+++ b/website-dist/index.html
@@ -39,7 +39,7 @@
 
         <p>Don't wait any longer - Sign up for Syfty today and start receiving notifications for the posts that matter
             to you!</p>
-        <form action="foo">
+        <form action="https://f5jbt6q5a4.execute-api.us-east-1.amazonaws.com/prod/email">
             <label for="email">Email:</label>
             <input type="email" id="email" pattern=".+@.+\..+" size="30" required>
             <input type="button" class="signup-button">Sign Up!</input>
