--- a/website-dist/index.html
+++ b/website-dist/index.html
@@ -42,7 +42,8 @@
         <form action="https://f5jbt6q5a4.execute-api.us-east-1.amazonaws.com/prod/email">
             <label for="email">Email:</label>
             <input type="email" id="email" pattern=".+@.+\..+" size="30" required>
-            <input type="button" class="signup-button">Sign Up!</input>
+            <label for="submit">Sign Up!</label>
+            <input type="submit" id="submit" value="Submit">
         </form>
 
     </div>
