--- a/website-dist/index.html
+++ b/website-dist/index.html
@@ -40,12 +40,41 @@
         <p>Don't wait any longer - Sign up for Syfty today and start receiving notifications for the posts that matter
             to you!</p>
 
-        <form action="https://f5jbt6q5a4.execute-api.us-east-1.amazonaws.com/prod/email" method="post">
+        <form id="signup-form">
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" pattern=".+@.+\..+" size="30" value="me@email.com" required>
             <button type="submit">Sign Up!</button>
         </form>
 
+        <div id="success-message" style="display: none;">
+            Thank you for signing up!
+        </div>
+
+        <script>
+            const form = document.getElementById('signup-form');
+            const successMessage = document.getElementById('success-message');
+
+            form.addEventListener('submit', (event) => {
+                event.preventDefault(); // prevent default form submission behavior
+
+                const formData = new FormData(form); // create a FormData object from the form data
+                const email = formData.get('email')
+                fetch('https://f5jbt6q5a4.execute-api.us-east-1.amazonaws.com/prod/email', {
+                    method: 'POST',
+                    body: email
+                })
+                    .then(response => {
+                        if (response.ok) {
+                            // hide the form and show the success message
+                            form.style.display = 'none';
+                            successMessage.style.display = 'block';
+                        } else {
+                            throw new Error('There was an error submitting the form');
+                        }
+                    })
+                    .catch(error => console.error(error));
+            });
+        </script>
     </div>
 </body>
 
