--- a/website-dist/index.html
+++ b/website-dist/index.html
@@ -59,7 +59,7 @@
 
                 const formData = new FormData(form); // create a FormData object from the form data
                 const email = formData.get('email')
-                fetch('https://f5jbt6q5a4.execute-api.us-east-1.amazonaws.com/prod/email', {
+                fetch('https://ld5pesoyvf.execute-api.us-east-1.amazonaws.com/prod/email', {
                     method: 'POST',
                     body: email
                 })
