add link to github

--- a/website-dist/index.html
+++ b/website-dist/index.html
@@ -39,7 +39,6 @@
 
         <p>Don't wait any longer - Sign up for Syfty today and start receiving notifications for the posts that matter
             to you!</p>
-
         <form id="signup-form">
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" pattern=".+@.+\..+" size="30" value="me@email.com" required>
@@ -75,6 +74,11 @@
                     .catch(error => console.error(error));
             });
         </script>
+        <br>
+        <div class="psuedofooter">
+            <p>See the source code <a href="https://github.com/ekand/syfty-cdk" target="_blank">on
+                    GitHub</a>.</p>
+        </div>
     </div>
 </body>
 
